--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -1047,13 +1047,13 @@
       ],
       "metadata": {
         "id": "VOIeK9cffooz",
-        "outputId": "ebebc98e-4246-492e-b2e3-d8830f157ae1",
+        "outputId": "f79be10d-402a-4ea4-e66c-05882eea143c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "VOIeK9cffooz",
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -2105,7 +2105,7 @@
         }
       },
       "id": "BC7W0gHFAfJX",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2189,19 +2189,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ge-cnhpP-66_",
-        "outputId": "ceaf75e3-648b-4295-8faf-00204e53fcbf"
+        "outputId": "3b057015-22e1-4832-edfb-3cb963fe1346"
       },
       "id": "ge-cnhpP-66_",
-      "execution_count": 34,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[2, 1, 1, 3, 1, 4, 2]\n",
-            "[1, 1, 1, 2, 2, 3, 4]\n",
-            "[1, 1, 1, 2, 2, 3, 4]\n",
-            "[1, 1, 1, 2, 2, 3, 4]\n"
+            "[4, 1, 4, 4, 4, 2, 4]\n",
+            "[1, 2, 4, 4, 4, 4, 4]\n",
+            "[1, 2, 4, 4, 4, 4, 4]\n",
+            "[1, 2, 4, 4, 4, 4, 4]\n"
           ]
         }
       ]
@@ -2229,46 +2229,51 @@
       "source": [
         "import random\n",
         "\n",
-        "lista = list(range(-20,20))                    # creamos una lista con los números correlativos entre 10 y 40\n",
-        "lista_original = random.choices(lista, k=15)  # elegimos aleatoriamente 15 números de la lista con posible repetición\n",
+        "              \n",
+        "lista_original = random.choices(range(-20,20), k=15)  # elegimos aleatoriamente 15 números de la lista con posible repetición\n",
         "print(\"Lista original:         \", lista_original)\n",
         "lista_original.sort()\n",
         "print(\"Lista original ordenada:\", lista_original)\n",
         "#lista_pares = []\n",
         "#lista_impares = []\n",
         "\n",
-        "def par_impar(lista_original):\n",
-        "  lista_pares = []\n",
-        "  lista_impares = []\n",
+        "def par_impar(a):\n",
+        "  return 1*a\n",
+        "lista_impares = []\n",
+        "lista_pares = []\n",
+        "lista_original\n",
         "\n",
-        "  for i in lista_original:\n",
+        "for i in lista_original:\n",
         "    if i%2:\n",
-        "        lista_pares.append(i)\n",
-        "        lista_pares.sort()\n",
+        "      lista_impares.append(i)\n",
+        "      lista_impares.sort()\n",
         "    else:\n",
-        "        lista_impares.append(i)\n",
-        "        lista_impares.sort()\n",
+        "      lista_pares.append(i)\n",
+        "      lista_pares.sort()\n",
         "\n",
-        "print(\"Lista con los pares:\",lista_impares)\n",
-        "print(\"Lista con los impares:  \", lista_impares)"
+        "\n",
+        "\n",
+        "print(f\"Lista con los impares:\",sorted(set(lista_impares)))\n",
+        "print(f\"Lista con los pares:  \",sorted(set(lista_pares)))"
       ],
       "metadata": {
         "id": "MOrMGfeGDURj",
-        "outputId": "708f7812-0fa7-467a-a68b-2e024d8ae0cf",
+        "outputId": "785c9eab-53e9-41c7-c0d1-da86a987aaf8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 126
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "MOrMGfeGDURj",
-      "execution_count": 33,
+      "execution_count": 191,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-f2c03bbef33c>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    def par_impar(a)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lista original:          [-6, 4, 6, 16, -4, 10, -10, 5, -15, 11, -10, 5, 4, 17, -16]\n",
+            "Lista original ordenada: [-16, -15, -10, -10, -6, -4, 4, 4, 5, 5, 6, 10, 11, 16, 17]\n",
+            "Lista con los impares: [-15, 5, 11, 17]\n",
+            "Lista con los pares:   [-16, -10, -6, -4, 4, 6, 10, 16]\n"
           ]
         }
       ]
