--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -2150,10 +2150,10 @@
         "l = random.choices(range(1,5), k = 7)      # la lista l contiene 7 elementos con posible repetición\n",
         "print(l)                                    # La lista final tendrá 7 elementos o menos, no se sabe\n",
         "\n",
-        "def burbuja(l):\n",
-        "    for i in range(1, len(l)):\n",
-        "        for j in range(0, len(l)-i):\n",
-        "            if(l[j+1] < l[j]):\n",
+        "def burbuja(l):               \n",
+        "    for i in range(1, len(l)):                # Seleccionamos el rango que queremos elegir\n",
+        "        for j in range(0, len(l)-i):          # Comparamos el rango actual con el anterior \n",
+        "            if(l[j+1] < l[j]):                # Comprobamos si es mayor o menor con el posterior con el anterior y si es menor lo intercambiamos\n",
         "                l[j], l[j+1] = l[j+1], l[j]   # intercambiamos los valores de la pareja contigua\n",
         "    return l\n",
         "\n",
@@ -2164,20 +2164,20 @@
         "\n",
         "\n",
         "def sort(lista):\n",
-        "    izquierda = []\n",
-        "    centro = []\n",
-        "    derecha = []\n",
+        "    izquierda = []                                        #dividimos en una lista a la izquierda\n",
+        "    centro = []                                           #otra lista en el centro\n",
+        "    derecha = []                                          #otra lista a la derecha\n",
         "    if len(lista) > 1:\n",
-        "        pivote = lista[0]\n",
+        "        pivote = lista[0]                                 #utilizamos un valor pivote para poner el resto de datos en el centro a la derecha o a la izquierda \n",
         "        for i in lista:\n",
-        "            if i < pivote:\n",
-        "                izquierda.append(i)\n",
+        "            if i < pivote:        \n",
+        "                izquierda.append(i)                       #si es menor que el pivote a la izquierda\n",
         "            elif i == pivote:\n",
-        "                centro.append(i)\n",
+        "                centro.append(i)                          # si es igual que el pivote al medio\n",
         "            elif i > pivote:\n",
-        "                derecha.append(i)\n",
+        "                derecha.append(i)                         # si es mayor que el pivote a la derecha\n",
         "        #print(izquierda+[\"-\"]+centro+[\"-\"]+derecha)\n",
-        "        return sort(izquierda)+centro+sort(derecha)\n",
+        "        return sort(izquierda)+centro+sort(derecha)       # devuelve ordenados la lista de las tres partes \n",
         "    else:\n",
         "      return lista\n",
         "\n",
@@ -2227,6 +2227,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#numeros aleatorios\n",
+        "\n",
         "import random\n",
         "\n",
         "              \n",
@@ -2234,11 +2236,10 @@
         "print(\"Lista original:         \", lista_original)\n",
         "lista_original.sort()\n",
         "print(\"Lista original ordenada:\", lista_original)\n",
-        "#lista_pares = []\n",
-        "#lista_impares = []\n",
         "\n",
-        "def par_impar(a):\n",
-        "  return 1*a\n",
+        "\n",
+        "# separar par de impar y ordenarlos sin repeticiones\n",
+        "\n",
         "lista_impares = []\n",
         "lista_pares = []\n",
         "lista_original\n",
@@ -2254,26 +2255,49 @@
         "\n",
         "\n",
         "print(f\"Lista con los impares:\",sorted(set(lista_impares)))\n",
-        "print(f\"Lista con los pares:  \",sorted(set(lista_pares)))"
+        "print(f\"Lista con los pares:  \",sorted(set(lista_pares)))\n",
+        "\n",
+        "\n",
+        "#desviación tipica\n",
+        "\n",
+        "import statistics\n",
+        "\n",
+        "list = lista_impares\n",
+        "desv_tipica_impar = statistics.pstdev(list)\n",
+        "print(\"La desviacion tipica de los numeros impares es: \" + str(desv_tipica_impar))\n",
+        "\n",
+        "list = lista_pares\n",
+        "desv_tipica_par = statistics.pstdev(list)\n",
+        "print(\"La desviacion tipica de los numeros pares es: \" + str(desv_tipica_par))\n",
+        "\n",
+        "if desv_tipica_impar<desv_tipica_par:\n",
+        "  print(\"La DT impar es menor que la par\",(desv_tipica_impar ),\" < \", desv_tipica_par)\n",
+        "else:\n",
+        "  print(\"La DT ipar es menor que la impar\",(desv_tipica_impar ),\" > \", desv_tipica_par)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "MOrMGfeGDURj",
-        "outputId": "785c9eab-53e9-41c7-c0d1-da86a987aaf8",
+        "outputId": "7b500c11-8501-4dc8-91d6-4b51165b9c80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "MOrMGfeGDURj",
-      "execution_count": 191,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Lista original:          [-6, 4, 6, 16, -4, 10, -10, 5, -15, 11, -10, 5, 4, 17, -16]\n",
-            "Lista original ordenada: [-16, -15, -10, -10, -6, -4, 4, 4, 5, 5, 6, 10, 11, 16, 17]\n",
-            "Lista con los impares: [-15, 5, 11, 17]\n",
-            "Lista con los pares:   [-16, -10, -6, -4, 4, 6, 10, 16]\n"
+            "Lista original:          [-3, 3, -9, 0, -10, 7, -16, 18, -4, -15, 7, 10, -15, 6, -17]\n",
+            "Lista original ordenada: [-17, -16, -15, -15, -10, -9, -4, -3, 0, 3, 6, 7, 7, 10, 18]\n",
+            "Lista con los impares: [-17, -15, -9, -3, 3, 7]\n",
+            "Lista con los pares:   [-16, -10, -4, 0, 6, 10, 18]\n",
+            "La desviacion tipica de los numeros impares es: 9.45714015968887\n",
+            "La desviacion tipica de los numeros pares es: 10.887176504718656\n",
+            "La DT impar es menor que la par 9.45714015968887  <  10.887176504718656\n"
           ]
         }
       ]
@@ -2293,6 +2317,76 @@
         "\n",
         "![Binario a decimal](https://github.com/financieras/pyCourse/blob/main/jupyter/img/binario_a_decimal.jpg?raw=1)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "binario= 101111\n",
+        "\n",
+        "numerobinario = str(binario)\n",
+        "print(numerobinario)\n",
+        "\n",
+        "posicion = len(numerobinario) - 1\n",
+        "\n",
+        "numerodecimal=\"\"\n",
+        "numeroposicion=\"\"\n",
+        "numerodecimales=0\n",
+        "\n",
+        "for posiciones, digitos in enumerate(numerobinario[::-1]):\n",
+        "  digito = int(digitos)\n",
+        "  posicion=int(posiciones)\n",
+        "\n",
+        "  print(posiciones,digitos)\n",
+        "\n",
+        "  numerodecimales+=int(digitos)* 2** posicion\n",
+        "  numerodecimal += str(digitos)+\"*2^\"+str(posiciones)+\"+\"\n",
+        "  \n",
+        "print(numerodecimales)\n",
+        "  \n",
+        "numerodecimal=numerodecimal\n",
+        "print(numerodecimal,\"=\",numerodecimales)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QgdvXOxdZC8_",
+        "outputId": "9a337865-26ea-4df3-89f2-aa0817c749ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "QgdvXOxdZC8_",
+      "execution_count": 356,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "101111\n",
+            "0 1\n",
+            "1 1\n",
+            "2 1\n",
+            "3 1\n",
+            "4 0\n",
+            "5 1\n",
+            "47\n",
+            "1*2^0+1*2^1+1*2^2+1*2^3+0*2^4+1*2^5+ = 47\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Z9f_dMmmlFQI"
+      },
+      "id": "Z9f_dMmmlFQI",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
