--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -252,11 +252,15 @@
         "  try: \n",
         "    a = float(input(\"Indique el primer número: \"))\n",
         "    b = float(input(\"Indique el segundo número: \"))\n",
+        "    if a<0 or b<0:\n",
+        "      print(\"Se ha introducido un numero negativo. \\nFin del programa.\")\n",
+        "      break\n",
+        "\n",
         "    if a==0:\n",
         "      print(f\"{a} A es 0\")\n",
         "      break\n",
         "    if b==0:\n",
-        "      print(f\"{B} B es 0\")\n",
+        "      print(f\"{b} B es 0\")\n",
         "      break\n",
         "    if a > b:\n",
         "      print(f\"El mayor es {a} y el menor es {b}.\")\n",
@@ -265,6 +269,7 @@
         "    else:\n",
         "      print(\"Son iguales.\")\n",
         "  except:\n",
+        "    \n",
         "    print(\"Se ha introducido un carácter no válido. \\nFin del programa.\")\n",
         "    break\n",
         " \n",
@@ -278,21 +283,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OcpenhGhe8Wv",
-        "outputId": "62e51f83-960b-46a4-cd19-617a92441afd"
+        "outputId": "724c5f70-813a-4055-8d50-c130b7df6148"
       },
       "id": "OcpenhGhe8Wv",
-      "execution_count": null,
+      "execution_count": 416,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Indique el primer número: 10\n",
-            "Indique el segundo número: 5\n",
-            "El mayor es 10.0 y el menor es 5.0.\n",
-            "Indique el primer número: 0\n",
-            "Indique el segundo número: 10\n",
-            "0.0 A es 0\n"
+            "Indique el primer número: -2\n",
+            "Indique el segundo número: -2\n",
+            "Se ha introducido un numero negativo. \n",
+            "Fin del programa.\n"
           ]
         }
       ]
@@ -317,13 +320,15 @@
     {
       "cell_type": "code",
       "source": [
+        "a=[]\n",
+        "\n",
         "while True:\n",
         "  n = float(input(\"Indique el número que desea escribir: \"))\n",
+        "  b.append(n)\n",
         "  if n < 0:\n",
         "    print(\"Fin del programa.\")\n",
         "    break\n",
-        "  else:\n",
-        "    print(n)\n",
+        "    print(a)\n",
         " \n",
         "\n",
         "\n"
@@ -331,45 +336,30 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 628
+          "height": 248
         },
         "id": "JhrudEhum-ZW",
-        "outputId": "8456437c-e0b1-4551-e350-d2a788b56c2e"
+        "outputId": "78864de2-489c-4c39-a04f-cb4c09e0f285"
       },
       "id": "JhrudEhum-ZW",
-      "execution_count": null,
+      "execution_count": 426,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Indique el número que desea escribir: 2\n",
-            "2.0\n",
-            "Indique el número que desea escribir: 3\n",
-            "3.0\n"
+            "Indique el número que desea escribir: 4\n"
           ]
         },
         {
           "output_type": "error",
-          "ename": "KeyboardInterrupt",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    624\u001b[0m         \"\"\"\n\u001b[0;32m--> 625\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    626\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-116-345701455e13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Indique el número que desea escribir: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fin del programa.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-426-4c71bd852b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Indique el número que desea escribir: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fin del programa.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'append'"
           ]
         }
       ]
@@ -2321,7 +2311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "binario= 101111\n",
+        "binario= 1101111\n",
         "\n",
         "numerobinario = str(binario)\n",
         "print(numerobinario)\n",
@@ -2350,28 +2340,29 @@
         "\n"
       ],
       "metadata": {
-        "id": "QgdvXOxdZC8_",
-        "outputId": "9a337865-26ea-4df3-89f2-aa0817c749ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QgdvXOxdZC8_",
+        "outputId": "a2a52fa6-efc1-4351-e09e-5fe287e71906"
       },
       "id": "QgdvXOxdZC8_",
-      "execution_count": 356,
+      "execution_count": 404,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "101111\n",
+            "1101111\n",
             "0 1\n",
             "1 1\n",
             "2 1\n",
             "3 1\n",
             "4 0\n",
             "5 1\n",
-            "47\n",
-            "1*2^0+1*2^1+1*2^2+1*2^3+0*2^4+1*2^5+ = 47\n"
+            "6 1\n",
+            "111\n",
+            "1*2^0+1*2^1+1*2^2+1*2^3+0*2^4+1*2^5+1*2^6+ = 111\n"
           ]
         }
       ]
@@ -2389,6 +2380,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "WNSMblxu9zQs"
+      },
+      "id": "WNSMblxu9zQs",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "8b2016cf",
       "metadata": {
@@ -2402,6 +2405,58 @@
         "* La tabla explica la forma de llegar al resultado en binario.\n",
         "\n",
         "![Decimal a binario](https://github.com/financieras/pyCourse/blob/main/jupyter/img/decimal_a_binario.jpg?raw=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import randint\n",
+        "a=[]\n",
+        "n=43\n",
+        "print(\" Partidendo del decimal:\",n)\n",
+        "print(\"_\"*40)\n",
+        "print(\"   ndecimal   entero   resto\")\n",
+        "print(\"=\"*40)\n",
+        "for i in range(6):\n",
+        "    if i==0:\n",
+        "      n1 = n\n",
+        "    else:\n",
+        "      n1=(n1//2)\n",
+        "    n2 = n1//2\n",
+        "    re = n1%2\n",
+        "    a.append(re)\n",
+        "    print(\"{:9}{:13}{:15}\".format(n1,n2,re))\n",
+        "\n",
+        "print(f\"El binario equivalente es:\",a)\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "Kc1nW6AX9ilU",
+        "outputId": "f436988c-830a-4b05-bfd9-2c7ab1b03b84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Kc1nW6AX9ilU",
+      "execution_count": 425,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Partidendo del decimal: 43\n",
+            "________________________________________\n",
+            "   ndecimal   entero   resto\n",
+            "========================================\n",
+            "       43           21              1\n",
+            "       21           10              1\n",
+            "       10            5              0\n",
+            "        5            2              1\n",
+            "        2            1              0\n",
+            "        1            0              1\n",
+            "El binario equivalente es: [1, 1, 0, 1, 0, 1]\n"
+          ]
+        }
       ]
     },
     {
