--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -2412,6 +2412,7 @@
       "source": [
         "from random import randint\n",
         "a=[]\n",
+        "b=[]\n",
         "n=43\n",
         "print(\" Partidendo del decimal:\",n)\n",
         "print(\"_\"*40)\n",
@@ -2428,17 +2429,18 @@
         "    print(\"{:9}{:13}{:15}\".format(n1,n2,re))\n",
         "\n",
         "print(f\"El binario equivalente es:\",a)\n",
-        "    "
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Kc1nW6AX9ilU",
-        "outputId": "f436988c-830a-4b05-bfd9-2c7ab1b03b84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kc1nW6AX9ilU",
+        "outputId": "42d90ee6-5822-4217-9976-d24547961a5d"
       },
       "id": "Kc1nW6AX9ilU",
-      "execution_count": 425,
+      "execution_count": 443,
       "outputs": [
         {
           "output_type": "stream",
@@ -2454,7 +2456,13 @@
             "        5            2              1\n",
             "        2            1              0\n",
             "        1            0              1\n",
-            "El binario equivalente es: [1, 1, 0, 1, 0, 1]\n"
+            "El binario equivalente es: [1, 1, 0, 1, 0, 1]\n",
+            "[1]\n",
+            "[1, 1]\n",
+            "[1, 1, 1]\n",
+            "[1, 1, 1, 1]\n",
+            "[1, 1, 1, 1, 1]\n",
+            "[1, 1, 1, 1, 1, 1]\n"
           ]
         }
       ]
